# bpftrace

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Vagrantfile  flake.nix
.github/include/: ci.py  leaks.txt
.github/workflows/: ci.yml
docs/: fuzzing.md
flatpak/: org.iovisor.Bpftrace.json
src/: CMakeLists.txt  attached_probe.cpp  attached_probe.h  bpfbytecode.cpp  bpfbytecode.h  bpffeature.cpp  bpffeature.h  bpfprogram.cpp  bpftrace.cpp  bpftrace.h  clang_parser.cpp  clang_parser.h  driver.h  iter_probes.h  lexer.l  log.cpp  main.cpp  output.cpp  output.h  parser.yy  printf.cpp  printf.h  probe_matcher.cpp  required_resources.h  tracepoint_format_parser.cpp  tracepoint_format_parser.h  types.cpp  types.h  utils.cpp  utils.h
src/aot/: CMakeLists.txt  aot.cpp  aot_main.cpp
src/arch/: aarch64.cpp  arch.h  x86_64.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast.h  async_event_types.cpp  async_event_types.h  attachpoint_parser.cpp  attachpoint_parser.h  codegen_llvm.cpp  codegen_llvm.h  diagnostic.cpp  diagnostic.h  field_analyser.cpp  field_analyser.h  irbuilderbpf.cpp  irbuilderbpf.h  location.cpp  location.h  probe_intern.cpp  probe_intern.h  semantic_analyser.cpp  semantic_analyser.h
src/ast/passes/: codegen_llvm.cpp  codegen_llvm.h  (+2 more)
tests/: CMakeLists.txt  README.md  clang_parser.cpp  mocks.h  parser.cpp  probe.cpp  scopeguard.cpp  semantic_analyser.cpp
tests/codegen/: call_kstack.cpp  call_ustack.cpp  common.h  general.cpp  regression.cpp
tests/runtime/: aot  call  probe  strcontains  watchpoint
tests/testprogs/: watchpoint_func_wildcard.c
(+10 files in other folders)
